tests/ecc-aws-558-network_acl_without_tag_information/placebo-green/ec2.DescribeNetworkAcls_1.json
{
    "status_code": 200,
    "data": {
        "NetworkAcls": [
            {
                "Associations": [],
                "Entries": [
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": true,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    },
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": false,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    }
                ],
                "IsDefault": false,
                "NetworkAclId": "acl-0dfd750d3831a8eb6",
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-558-network_acl_without_tag_information"
                    }
                ],
                "VpcId": "vpc-12345asdfg",
                "OwnerId": "111111111111"
            }
        ],
        "ResponseMetadata": {}
    }
}
